--- a/config/zones/BD.yaml
+++ b/config/zones/BD.yaml
@@ -8,6 +8,24 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 10.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
   coal:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -15,7 +33,13 @@ capacity:
     - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
       value: 520.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 520.0
     - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 1850.0
+    - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
       value: 1850.0
     - datetime: '2022-01-01'
@@ -43,8 +67,29 @@ capacity:
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 11390.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 11390.0
   hydro:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 230.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 230.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 230.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 230.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 230.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 230.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 230.0
   oil:
@@ -93,6 +138,24 @@ capacity:
       value: 770.0
   wind:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 0.0
 contributors:
