--- a/config/zones/GE.yaml
+++ b/config/zones/GE.yaml
@@ -10,12 +10,24 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 1780.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 1780.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 1780.0
     - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 2040.0
+    - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
       value: 2040.0
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
-      value: 2010.0
+      value: 2040.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 2040.0
   hydro:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -42,7 +54,19 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 0.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
     - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 20.0
     - datetime: '2023-01-01'
@@ -52,9 +76,24 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 20.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
-      value: 30.0
+      value: 20.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
 contributors:
   - alixunderplatz
   - kruschk
