--- a/config/zones/GN.yaml
+++ b/config/zones/GN.yaml
@@ -3,6 +3,9 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 370.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 370.0
     - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
       value: 360.0
@@ -12,6 +15,12 @@ capacity:
     - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
       value: 810.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 810.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 810.0
   solar:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -19,7 +28,19 @@ capacity:
     - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
       value: 10.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
     - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 20.0
   unknown:
@@ -36,6 +57,12 @@ capacity:
       source: Ember, Yearly electricity data
       value: 380.0
     - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 430.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 430.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 430.0
 country: GN
