--- a/config/zones/GU.yaml
+++ b/config/zones/GU.yaml
@@ -8,6 +8,18 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 40.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 40.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 40.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 40.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 40.0
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 100.0
@@ -15,11 +27,38 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 490.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 490.0
     - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 420.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 420.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 420.0
+    - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 420.0
   wind:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 0.0
 country: GU
