--- a/config/zones/MW.yaml
+++ b/config/zones/MW.yaml
@@ -8,11 +8,38 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 20.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
   hydro:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 370.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 370.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 370.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 370.0
     - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 390.0
+    - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 390.0
   solar:
@@ -23,6 +50,9 @@ capacity:
       source: Ember, Yearly electricity data
       value: 30.0
     - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 80.0
+    - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
       value: 80.0
     - datetime: '2021-01-01'
@@ -39,6 +69,15 @@ capacity:
       source: Ember, Yearly electricity data
       value: 120.0
     - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 130.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 130.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 130.0
+    - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 130.0
 country: MW
