--- a/config/zones/QA.yaml
+++ b/config/zones/QA.yaml
@@ -9,6 +9,24 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 0.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
   gas:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -16,15 +34,63 @@ capacity:
     - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
       value: 12580.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 12580.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 12580.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 12580.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 12580.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 12580.0
   solar:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
       value: 10.0
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 810.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 810.0
   unknown:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 10.0
 contributors:
