--- a/config/zones/RE.yaml
+++ b/config/zones/RE.yaml
@@ -11,8 +11,32 @@ capacity:
     - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
       value: 90.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 90.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 90.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 90.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 90.0
   coal:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 170.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 170.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 170.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 170.0
+    - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
       value: 170.0
     - datetime: '2022-01-01'
@@ -22,8 +46,26 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 130.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 130.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 130.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 130.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 130.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 130.0
   solar:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 190.0
+    - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
       value: 190.0
     - datetime: '2019-01-01'
@@ -42,8 +84,38 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 290.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 290.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 290.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 290.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 290.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 290.0
   wind:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 20.0
 contributors:
