--- a/config/zones/TW.yaml
+++ b/config/zones/TW.yaml
@@ -8,9 +8,24 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 80.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 80.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 80.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 80.0
     - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
       value: 90.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 90.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 80.0
   coal:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -21,10 +36,16 @@ capacity:
     - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
       value: 19240.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 19240.0
     - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
       value: 19210.0
     - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 19160.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 19160.0
   gas:
@@ -53,7 +74,22 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 2090.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 2090.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 2090.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 2090.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 2090.0
     - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 2100.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 2100.0
   hydro storage:
@@ -68,6 +104,12 @@ capacity:
       source: Ember, Yearly electricity data
       value: 4510.0
     - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 3870.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 3870.0
+    - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
       value: 3870.0
     - datetime: '2022-01-01'
@@ -89,7 +131,13 @@ capacity:
     - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
       value: 2410.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 2410.0
     - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 2420.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 2420.0
   solar:
