--- a/config/zones/AF.yaml
+++ b/config/zones/AF.yaml
@@ -8,11 +8,35 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 0.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
     - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 40.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 40.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 40.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 40.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 40.0
   hydro:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 350.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 350.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 350.0
+    - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
       value: 350.0
     - datetime: '2021-01-01'
@@ -21,19 +45,73 @@ capacity:
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 460.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 460.0
   solar:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 20.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
     - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 30.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 30.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 30.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 30.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 30.0
   unknown:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 240.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 240.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 240.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 240.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 240.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 240.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 240.0
   wind:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 0.0
 country: AF
