--- a/config/zones/BS.yaml
+++ b/config/zones/BS.yaml
@@ -8,15 +8,45 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 0.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
   solar:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
       value: 0.0
     - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
       value: 10.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
   unknown:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 730.0
+    - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
       value: 730.0
     - datetime: '2019-01-01'
@@ -25,11 +55,29 @@ capacity:
     - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
       value: 900.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 900.0
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 930.0
   wind:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 0.0
 country: BS
