--- a/config/zones/BY.yaml
+++ b/config/zones/BY.yaml
@@ -13,10 +13,19 @@ capacity:
     - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
       value: 50.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 50.0
     - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
       value: 120.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 120.0
     - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 140.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 140.0
   gas:
@@ -38,15 +47,51 @@ capacity:
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 9720.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 9720.0
   hydro:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 100.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 100.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 100.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 100.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 100.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 100.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 100.0
   nuclear:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 0.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
     - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 1170.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 1170.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 1170.0
   solar:
@@ -56,10 +101,19 @@ capacity:
     - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
       value: 150.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 150.0
     - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
       value: 160.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 160.0
     - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 270.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 270.0
   wind:
@@ -72,7 +126,16 @@ capacity:
     - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
       value: 110.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 110.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 110.0
     - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 120.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 120.0
 contributors:
