--- a/config/zones/CF.yaml
+++ b/config/zones/CF.yaml
@@ -3,15 +3,57 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 20.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
   solar:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 0.0
   unknown:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 20.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
     - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 70.0
+    - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 70.0
 country: CF
