--- a/config/zones/CO.yaml
+++ b/config/zones/CO.yaml
@@ -11,6 +11,9 @@ capacity:
     - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
       value: 320.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 320.0
     - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
       value: 330.0
@@ -19,7 +22,10 @@ capacity:
       value: 350.0
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
-      value: 400.0
+      value: 350.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 350.0
   coal:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -27,11 +33,29 @@ capacity:
     - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
       value: 1650.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 1650.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 1650.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 1650.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 1650.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 1650.0
   gas:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 3290.0
     - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 3380.0
+    - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
       value: 3380.0
     - datetime: '2020-01-01'
@@ -57,6 +81,9 @@ capacity:
       source: Ember, Yearly electricity data
       value: 11930.0
     - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 11950.0
+    - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
       value: 11950.0
     - datetime: '2022-01-01'
@@ -91,6 +118,9 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 10.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
     - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
       value: 30.0
@@ -108,6 +138,24 @@ capacity:
       value: 680.0
   wind:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 20.0
 contributors:
