--- a/config/zones/DJ.yaml
+++ b/config/zones/DJ.yaml
@@ -3,15 +3,63 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 0.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
   unknown:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 120.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 120.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 120.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 120.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 120.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 120.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 120.0
   wind:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 0.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
     - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 20.0
     - datetime: '2023-01-01'
