--- a/config/zones/EG.yaml
+++ b/config/zones/EG.yaml
@@ -8,10 +8,19 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 70.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 70.0
     - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
       value: 80.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 80.0
     - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 120.0
+    - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 120.0
     - datetime: '2023-01-01'
@@ -36,11 +45,29 @@ capacity:
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 52660.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 52660.0
   hydro:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 2800.0
     - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 2830.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 2830.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 2830.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 2830.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 2830.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 2830.0
   solar:
@@ -72,10 +99,16 @@ capacity:
     - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
       value: 1130.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 1130.0
     - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
       value: 1380.0
     - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 1640.0
+    - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 1640.0
     - datetime: '2023-01-01'
