--- a/config/zones/GT.yaml
+++ b/config/zones/GT.yaml
@@ -14,14 +14,38 @@ capacity:
     - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
       value: 1040.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 1040.0
     - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 870.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 870.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 870.0
   coal:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 520.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 520.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 520.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 520.0
     - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 440.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 440.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 440.0
   hydro:
@@ -37,8 +61,32 @@ capacity:
     - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
       value: 1580.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 1570.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 1570.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 1570.0
   solar:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 100.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 100.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 100.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 100.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 100.0
+    - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 100.0
     - datetime: '2023-01-01'
@@ -48,7 +96,22 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 810.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 810.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 810.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 810.0
     - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 680.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 680.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 680.0
   wind:
@@ -56,6 +119,21 @@ capacity:
       source: Ember, Yearly electricity data
       value: 80.0
     - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 110.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 110.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 110.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 110.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 110.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 110.0
 contributors:
