--- a/config/zones/HN.yaml
+++ b/config/zones/HN.yaml
@@ -8,7 +8,22 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 210.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 210.0
     - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 220.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 220.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 220.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 220.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 220.0
   coal:
@@ -18,11 +33,41 @@ capacity:
     - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
       value: 100.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 100.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 100.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 100.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 100.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 100.0
   gas:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 0.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
     - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 50.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 50.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 50.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 50.0
   hydro:
@@ -44,6 +89,9 @@ capacity:
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 910.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 910.0
   solar:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -57,6 +105,15 @@ capacity:
     - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
       value: 530.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 530.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 530.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 530.0
   unknown:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -67,11 +124,38 @@ capacity:
     - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
       value: 920.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 920.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 920.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 920.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 920.0
   wind:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 230.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 230.0
     - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 240.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 240.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 240.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 240.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 240.0
 contributors:
