--- a/config/zones/IL.yaml
+++ b/config/zones/IL.yaml
@@ -8,11 +8,44 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 30.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 30.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 30.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 30.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 30.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 30.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 30.0
   coal:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 4900.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 4900.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 4900.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 4900.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 4900.0
     - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 4320.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 4320.0
   gas:
@@ -31,11 +64,32 @@ capacity:
     - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
       value: 12320.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 12320.0
     - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 12720.0
   hydro:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 10.0
   solar:
@@ -64,8 +118,38 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 0.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
   wind:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 30.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 30.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 30.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 30.0
+    - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
       value: 30.0
     - datetime: '2022-01-01'
