--- a/config/zones/KG.yaml
+++ b/config/zones/KG.yaml
@@ -8,6 +8,24 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 810.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 810.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 810.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 810.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 810.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 810.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 810.0
   hydro:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -15,7 +33,16 @@ capacity:
     - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
       value: 3670.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 3670.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 3670.0
     - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 2780.0
+    - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 2780.0
     - datetime: '2023-01-01'
@@ -23,6 +50,24 @@ capacity:
       value: 3210.0
   solar:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 0.0
 country: KG
