--- a/config/zones/KW.yaml
+++ b/config/zones/KW.yaml
@@ -8,6 +8,9 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 10220.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 10220.0
     - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
       value: 11100.0
@@ -17,8 +20,32 @@ capacity:
     - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
       value: 11680.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 11680.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 11680.0
   oil:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 8500.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 8500.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 8500.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 8500.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 8500.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 8500.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 8500.0
   solar:
@@ -31,7 +58,16 @@ capacity:
     - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
       value: 80.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 80.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 80.0
     - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 100.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 100.0
   wind:
@@ -39,6 +75,21 @@ capacity:
       source: Ember, Yearly electricity data
       value: 0.0
     - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 10.0
 contributors:
