--- a/config/zones/MD.yaml
+++ b/config/zones/MD.yaml
@@ -8,23 +8,101 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 10.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
     - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 20.0
   coal:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 1600.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 1600.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 1600.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 1600.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 1600.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 1600.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 1600.0
   gas:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 1180.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 1180.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 1180.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 1180.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 1180.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 1180.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 1180.0
   hydro:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 60.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 60.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 60.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 60.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 60.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 60.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 60.0
   solar:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
       value: 0.0
     - datetime: '2021-01-01'
@@ -44,6 +122,9 @@ capacity:
       source: Ember, Yearly electricity data
       value: 30.0
     - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 40.0
+    - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
       value: 40.0
     - datetime: '2021-01-01'
