--- a/config/zones/ML.yaml
+++ b/config/zones/ML.yaml
@@ -8,15 +8,54 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 40.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 40.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 40.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 40.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 40.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 40.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 40.0
   hydro:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 320.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 320.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 320.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 320.0
+    - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
       value: 320.0
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 460.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 460.0
   solar:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
       value: 10.0
     - datetime: '2020-01-01'
@@ -28,8 +67,14 @@ capacity:
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 100.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 100.0
   unknown:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 460.0
+    - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
       value: 460.0
     - datetime: '2019-01-01'
@@ -42,6 +87,9 @@ capacity:
       source: Ember, Yearly electricity data
       value: 490.0
     - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 510.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 510.0
 country: ML
