--- a/config/zones/MN.yaml
+++ b/config/zones/MN.yaml
@@ -8,7 +8,13 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 880.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 880.0
     - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 910.0
+    - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
       value: 910.0
     - datetime: '2021-01-01'
@@ -16,9 +22,30 @@ capacity:
       value: 960.0
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
-      value: 970.0
+      value: 960.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 960.0
   hydro:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 30.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 30.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 30.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 30.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 30.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 30.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 30.0
   solar:
@@ -31,11 +58,38 @@ capacity:
     - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
       value: 90.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 90.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 90.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 90.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 90.0
   wind:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 100.0
     - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 160.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 160.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 160.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 160.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 160.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 160.0
 contributors:
