--- a/config/zones/MT.yaml
+++ b/config/zones/MT.yaml
@@ -8,8 +8,44 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 0.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
   gas:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 360.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 360.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 360.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 360.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 360.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 360.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 360.0
   solar:
@@ -38,8 +74,44 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 190.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 190.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 190.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 190.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 190.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 190.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 190.0
   wind:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 0.0
 country: MT
