--- a/config/zones/NC.yaml
+++ b/config/zones/NC.yaml
@@ -3,12 +3,57 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 0.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
   coal:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 370.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 370.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 370.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 370.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 370.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 370.0
   hydro:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 80.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 80.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 80.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 80.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 80.0
+    - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 80.0
   solar:
@@ -34,11 +79,35 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 440.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 440.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 440.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 440.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 440.0
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 640.0
   wind:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 40.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 40.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 40.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 40.0
+    - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
       value: 40.0
     - datetime: '2022-01-01'
