--- a/config/zones/PG.yaml
+++ b/config/zones/PG.yaml
@@ -8,14 +8,41 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 20.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
   gas:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 150.0
+    - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
       value: 150.0
     - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
       value: 160.0
     - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 210.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 210.0
+    - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 210.0
     - datetime: '2023-01-01'
@@ -25,6 +52,21 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 260.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 260.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 260.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 260.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 260.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 260.0
     - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 330.0
@@ -32,8 +74,44 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 0.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
   unknown:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 540.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 540.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 540.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 540.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 540.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 540.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 540.0
 country: PG
