--- a/config/zones/SC.yaml
+++ b/config/zones/SC.yaml
@@ -8,18 +8,66 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 0.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
     - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 10.0
   unknown:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 100.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 100.0
     - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 110.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 110.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 110.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 110.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 110.0
   wind:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 10.0
 contributors:
