--- a/config/zones/SG.yaml
+++ b/config/zones/SG.yaml
@@ -8,7 +8,22 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 40.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 40.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 40.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 40.0
     - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 50.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 40.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 50.0
   coal:
@@ -19,6 +34,9 @@ capacity:
       source: Ember, Yearly electricity data
       value: 210.0
     - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 180.0
+    - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
       value: 180.0
     - datetime: '2021-01-01'
@@ -34,9 +52,24 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 10850.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 10850.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 10850.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 10850.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 10850.0
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
-      value: 10350.0
+      value: 10850.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 10850.0
   solar:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
