--- a/config/zones/SV.yaml
+++ b/config/zones/SV.yaml
@@ -14,8 +14,57 @@ capacity:
     - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
       value: 300.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 300.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 300.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 300.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 300.0
+  gas:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 380.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 380.0
   geothermal:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 200.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 200.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 200.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 200.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 200.0
+    - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
       value: 200.0
     - datetime: '2023-01-01'
@@ -28,6 +77,21 @@ capacity:
     - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
       value: 580.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 580.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 570.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 570.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 570.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 570.0
   solar:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -54,17 +118,44 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 550.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 550.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 550.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 550.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 550.0
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
-      value: 930.0
+      value: 550.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 550.0
   wind:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+    - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
       value: 0.0
     - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
       value: 40.0
     - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 50.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 50.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 50.0
 contributors:
