--- a/config/zones/UY.yaml
+++ b/config/zones/UY.yaml
@@ -8,11 +8,66 @@ capacity:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 420.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 420.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 420.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 420.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 420.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 420.0
     - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 740.0
+  gas:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 750.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 1110.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 1110.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 1110.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 1110.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 1110.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 1110.0
   hydro:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 1540.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 1540.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 1540.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 1540.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 1540.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 1540.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 1540.0
   solar:
@@ -20,6 +75,9 @@ capacity:
       source: Ember, Yearly electricity data
       value: 240.0
     - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 250.0
+    - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
       value: 250.0
     - datetime: '2020-01-01'
@@ -37,21 +95,45 @@ capacity:
   unknown:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
-      value: 830.0
+      value: 80.0
     - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
-      value: 1190.0
+      value: 80.0
     - datetime: '2019-01-01'
       source: Ember, Yearly electricity data
-      value: 1180.0
+      value: 70.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 70.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 70.0
     - datetime: '2022-01-01'
       source: Ember, Yearly electricity data
-      value: 1150.0
+      value: 70.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 70.0
   wind:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
       value: 1510.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 1510.0
     - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 1520.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 1520.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 1520.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 1520.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 1520.0
 contributors:
