--- a/config/zones/VN.yaml
+++ b/config/zones/VN.yaml
@@ -11,12 +11,21 @@ capacity:
     - datetime: '2018-01-01'
       source: Ember, Yearly electricity data
       value: 380.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 380.0
     - datetime: '2020-01-01'
       source: Ember, Yearly electricity data
       value: 390.0
     - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
       value: 370.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 380.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 380.0
   coal:
     - datetime: '2017-01-01'
       source: Ember, Yearly electricity data
@@ -41,6 +50,24 @@ capacity:
       value: 27240.0
   gas:
     - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 8150.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 8150.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 8150.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 8150.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 8150.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 8150.0
+    - datetime: '2023-01-01'
       source: Ember, Yearly electricity data
       value: 8150.0
   hydro:
@@ -76,6 +103,9 @@ capacity:
       source: Ember, Yearly electricity data
       value: 4990.0
     - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 16660.0
+    - datetime: '2021-01-01'
       source: Ember, Yearly electricity data
       value: 16660.0
     - datetime: '2022-01-01'
